--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@types/auth0-js": "^8.11.11",
+    "auth0-js": "^9.10.0",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.5.4",
+    "express-http-proxy": "^1.5.1",
     "rxjs": "~6.3.3",
+    "server": "^1.0.18",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
@@ -33,9 +37,9 @@
     "@angular/cli": "~7.2.3",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
